fix CTA align

--- a/react-vite/src/components/LoginFormModal/LoginForm.css
+++ b/react-vite/src/components/LoginFormModal/LoginForm.css
@@ -64,7 +64,7 @@
   .form-group {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-start;
     width: 460px;
     margin-top: 12px;
@@ -83,7 +83,7 @@
   }
   
   .form-group input{
-    width: 300px;
+    width: 262px;
     height: 31px;
     border: 1px solid rgb(204, 204, 204);
     outline-color: rgb(51, 51, 51);
@@ -105,7 +105,7 @@
     font-size: 16px;
     font-weight: 700px;
     text-align: center;
-    width: 294.79px;
+    width: 264px;
     height: 36px;
   }
   
@@ -128,6 +128,6 @@
     display: flex; /* Ensure label and input are aligned horizontally */
     flex-direction: column;
     align-items: flex-start; /* Align children to the left */
-    width: 100%; /* Ensure it spans the full width */
+    width: 276px; /* Ensure it spans the full width */
     gap: 8px;
   }
