--- a/react-vite/src/components/SignupFormModal/SignupForm.css
+++ b/react-vite/src/components/SignupFormModal/SignupForm.css
@@ -64,7 +64,7 @@
   .form-group {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-start;
     width: 460px;
     margin-top: 12px;
@@ -82,7 +82,7 @@
   }
   
   .form-group input{
-    width: 100%;
+    width: 262px;
     height: 31px;
     border: 1px solid rgb(204, 204, 204);
     outline-color: rgb(51, 51, 51);
@@ -104,7 +104,7 @@
     font-size: 16px;
     font-weight: 700px;
     text-align: center;
-    width: 294.79px;
+    width: 100%;
     height: 36px;
   }
   
@@ -128,5 +128,5 @@
     display: flex; /* Ensure label and input are aligned horizontally */
     flex-direction: column;
     align-items: flex-start; /* Align children to the left */
-    width: 100%; /* Ensure it spans the full width */
+    width: 276px; /* Ensure it spans the full width */
   }
